--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -40,7 +40,7 @@ import java.util.Map;
 @javax.annotation.Generated(
         value = "{{generatorClass}}",
         date  = "{{generatedDate}}")
-public class Default{{classname}} extends AbstractInstanceResource<{{classname}}> implements {{classname}} {
+public class Default{{classname}} extends {{#parent}}{{.}}{{/parent}}{{^parent}}AbstractInstanceResource<{{classname}}>{{/parent}} implements {{classname}} {
 
 {{#vars}}
     private final static {{vendorExtensions.propertyType}}{{#vendorExtensions.typeClassExtra}}<{{{datatypeWithEnum}}}>{{/vendorExtensions.typeClassExtra}} {{name}}Property = new {{vendorExtensions.propertyType}}("{{baseName}}"{{vendorExtensions.constructorTypeExtra}});
